Still Needs fixing, read desc
* Fixed nodemap
* Rest is WIP

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,11 +64,12 @@
     <Compile Include="Assets\Scripts\CheckPoint.cs" />
     <Compile Include="Assets\Scripts\TopDownCarController.cs" />
     <Compile Include="Assets\Scripts\CarLapCounter.cs" />
+    <Compile Include="Assets\Scripts\WaypointNode.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\CarAIHandler.cs" />
     <Compile Include="Assets\Scripts\WheelParticleHandler.cs" />
     <Compile Include="Assets\Scripts\WheelTrailRendererHandler.cs" />
-    <Compile Include="Assets\Scripts\WaypointNode.cs" />
+    <Compile Include="Assets\Scripts\DrawPathHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
